Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-47938

winrt: MessageDialog doesn't show on windows phone.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.6.0
    • 5.6
    • None
    • Qt 5.6
      Windows Phone 8.1
    • WinRT
    • 9cdbf48c3375feb9bff2e8a4749ec47b9831b15c

    Description

      Steps:
      1. Run system dialog's example on windows phone
      2. Select Message tab.
      3. Press open.
      Expected: Native dialog to appear.
      Actual: No dialog, system output print about thread marshaling problem.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samuelnevala Samuel Nevala
            samuelnevala Samuel Nevala
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes